--- a/server/package.json
+++ b/server/package.json
@@ -7,5 +7,16 @@
     "mongoose": "^7.5.2",
     "nodemailer": "^6.9.5",
     "nodemon": "^3.0.1"
-  }
+  },
+  "name": "server",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
